--- a/frontend/studente/src/pages/institute/institute.html
+++ b/frontend/studente/src/pages/institute/institute.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content padding>
- <div>{{institute.institute.name}}</div>
+ <div>{{institute.teachingUnit.name}}</div>
 </ion-content>
