--- a/frontend/studente/src/pages/stages/stages.html
+++ b/frontend/studente/src/pages/stages/stages.html
@@ -7,5 +7,27 @@
 </ion-header>
 
 <ion-content padding>
- <div>stage</div>
+  <button (click)="addNewStage()">{{'stage_add_new_button'|translate}}</button>
+  <div class="stage-filter">
+  <input type="text" [(ngModel)]="filter" placeholder="{{'stage_filter_placeholder'|translate}}">
+    <ion-icon class="filter-search-icon" name="md-search"></ion-icon>
+      <ion-item>
+      <ion-label>{{'stage_order_label'|translate}}</ion-label>
+      <ion-select [(ngModel)]="order">
+        <ion-option value=true>A-Z</ion-option>
+        <ion-option value=false>Z-A</ion-option>
+      </ion-select>
+    </ion-item>
+   </div>
+  <ion-list>
+      <ion-card  *ngFor="let stage of stages| experiencefilter:filter:'title'| orderBy:'stage.attributes.title':order" >
+      <h1>{{stage.attributes.title}}</h1>
+      <button (click)="toggleDetails(stage)">+</button>
+        <div *ngIf="showDetails">
+          {{stage.attributes.title}}
+           <button (click)="deleteStage(stage)">{{'stage_delete_button'|translate}}</button>
+           <button (click)="updateStage(stage)">{{'stage_update_button'|translate}}</button>
+        </div>
+      </ion-card>
+    </ion-list>
 </ion-content>
