started to working on ui

--- a/frontend/studente/src/pages/activities/activities.html
+++ b/frontend/studente/src/pages/activities/activities.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      attivita
+     {{'title_activities'|translate}}
     </ion-title>
   </ion-navbar>
 </ion-header>
