--- a/frontend/studente/src/pages/addStage/addStage.html
+++ b/frontend/studente/src/pages/addStage/addStage.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      add stage
+      {{'title_add_stage'|translate}}
     </ion-title>
   </ion-navbar>
 </ion-header>
