--- a/frontend/studente/src/pages/certifications/certifications.html
+++ b/frontend/studente/src/pages/certifications/certifications.html
@@ -1,7 +1,8 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      certificati
+            {{'title_certification'|translate}}
+
     </ion-title>
   </ion-navbar>
 </ion-header>
