--- a/frontend/studente/src/pages/curriculum/curriculum.html
+++ b/frontend/studente/src/pages/curriculum/curriculum.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      cv
+      {{'title_curriculum'|translate}}
     </ion-title>
   </ion-navbar>
 </ion-header>
