--- a/frontend/studente/src/pages/home/home.html
+++ b/frontend/studente/src/pages/home/home.html
@@ -8,7 +8,7 @@
 
 <ion-content padding>
   <div class="training-list">
-   <div>{{ 'home_training_label' | translate }}</div>
+   <div class="home-title-label">{{ 'home_training_label' | translate }}</div>
     <ion-list>
       <ion-card class="home-registration" *ngFor="let registration of registrations" (click)="openRegistration(registration)">
         <div>{{registration.teachingUnit.name}}
@@ -21,7 +21,7 @@
     </ion-list>
   </div>
   <div class="experiences-list">
-   <div>{{ 'home_experiences_label' | translate }}</div>
+   <div class="home-title-label">{{ 'home_experiences_label' | translate }}</div>
     <ion-list>
       <ion-card class="home-experience" (click)="openStages()">
         <div>
