--- a/frontend/studente/src/pages/activities/activities.html
+++ b/frontend/studente/src/pages/activities/activities.html
@@ -1,11 +1,40 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-     {{'title_activities'|translate}}
+      {{'title_activities'|translate}}
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
- <div>attivita</div>
+  <div class="row-add-stage">
+    <button class="button-add-stage" ion-button clear (click)="addNewActivity()">{{'activity_add_new_button'|translate}}</button>
+  </div>
+  <div class="stage-filter">
+    <input type="text" [(ngModel)]="filter" placeholder="{{'stage_filter_placeholder'|translate}}">
+    <ion-icon class="filter-search-icon" name="md-search"></ion-icon>
+    <ion-item>
+      <ion-label>{{'activity_order_label'|translate}}</ion-label>
+      <ion-select [(ngModel)]="order">
+        <ion-option value=true>A-Z</ion-option>
+        <ion-option value=false>Z-A</ion-option>
+      </ion-select>
+    </ion-item>
+  </div>
+  <ion-list>
+    <ion-card  *ngFor="let activity of activities| experiencefilter:filter:'title'| orderBy:'activity.attributes.title':order">
+      <div class="expandable-list">
+        <div class="stage-title">{{activity.attributes.title}}</div>
+        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(activity)"> <ion-icon class="stage-expansion-icon" item-right [name]="isDetailsShown(activity) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
+      </div>
+      <div padding *ngIf="isDetailsShown(activity)">
+        {{activity.attributes.title}}
+        <div >
+          <button class="button-add-stage" ion-button clear (click)="deleteActivity(activity)">{{'stage_delete_button'|translate}}</button>
+          <button class="button-add-stage" ion-button clear (click)="updateActivity(activity)">{{'stage_update_button'|translate}}</button>
+        </div>
+      </div>
+
+    </ion-card>
+  </ion-list>
 </ion-content>
