--- a/frontend/studente/src/pages/certifications/certifications.html
+++ b/frontend/studente/src/pages/certifications/certifications.html
@@ -1,12 +1,44 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-            {{'title_certification'|translate}}
-
+      {{'title_certifications'|translate}}
     </ion-title>
+    <ion-buttons end>
+      <button-home></button-home><button-notifications></button-notifications><button-profile></button-profile>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
- <div>certificati</div>
+  <div class="row-add-stage">
+    <button class="button-add-stage" ion-button clear (click)="addNewCertification()">{{'certification_add_new_button'|translate}}</button>
+  </div>
+  <div class="stage-filter">
+    <input type="text" [(ngModel)]="filter" placeholder="{{'stage_filter_placeholder'|translate}}">
+    <ion-icon class="filter-search-icon" name="md-search"></ion-icon>
+    <ion-item>
+      <ion-label>{{'certification_order_label'|translate}}</ion-label>
+      <ion-select [(ngModel)]="order">
+        <ion-option value=true>A-Z</ion-option>
+        <ion-option value=false>Z-A</ion-option>
+      </ion-select>
+    </ion-item>
+  </div>
+  <ion-list>
+    <ion-card  *ngFor="let certification of certifications| experiencefilter:filter:'title'| orderBy:'certification.attributes.title':order">
+      <div class="expandable-list">
+        <div class="stage-title">{{certification.attributes.title}}</div>
+        <div class="stage-certificate">certificato si/no</div>
+        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(certification)"> <ion-icon class="stage-expansion-icon" item-right [name]="isDetailsShown(certification) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
+      </div>
+      <div padding *ngIf="isDetailsShown(certification)">
+        {{certification.attributes.title}}
+        <div >
+          <button class="button-add-stage" ion-button clear (click)="deleteCertification(certification)">{{'certification_delete_button'|translate}}</button>
+          <button class="button-add-stage" ion-button clear (click)="updateCertification(certification)">{{'certification_update_button'|translate}}</button>
+        </div>
+      </div>
+
+    </ion-card>
+  </ion-list>
 </ion-content>
