--- a/frontend/studente/src/pages/events/events.html
+++ b/frontend/studente/src/pages/events/events.html
@@ -7,5 +7,35 @@
 </ion-header>
 
 <ion-content padding>
- <div>events</div>
+  <div class="row-add-stage">
+    <button class="button-add-stage" ion-button clear (click)="addNewEvent()">{{'event_add_new_button'|translate}}</button>
+  </div>
+  <div class="stage-filter">
+    <input type="text" [(ngModel)]="filter" placeholder="{{'stage_filter_placeholder'|translate}}">
+    <ion-icon class="filter-search-icon" name="md-search"></ion-icon>
+    <ion-item>
+      <ion-label>{{'event_order_label'|translate}}</ion-label>
+      <ion-select [(ngModel)]="order">
+        <ion-option value=true>A-Z</ion-option>
+        <ion-option value=false>Z-A</ion-option>
+      </ion-select>
+    </ion-item>
+  </div>
+  <ion-list>
+    <ion-card  *ngFor="let event of events| experiencefilter:filter:'title'| orderBy:'event.attributes.title':order">
+      <div class="expandable-list">
+        <div class="stage-title">{{event.attributes.title}}</div>
+        <div class="stage-certificate">certificato si/no</div>
+        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(event)"> <ion-icon class="stage-expansion-icon" item-right [name]="isDetailsShown(event) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
+      </div>
+      <div padding *ngIf="isDetailsShown(event)">
+        {{event.attributes.title}}
+        <div >
+          <button class="button-add-stage" ion-button clear (click)="deleteEvent(event)">{{'event_delete_button'|translate}}</button>
+          <button class="button-add-stage" ion-button clear (click)="updateEvent(event)">{{'event_update_button'|translate}}</button>
+        </div>
+      </div>
+
+    </ion-card>
+  </ion-list>
 </ion-content>
