--- a/frontend/studente/src/pages/events/events.html
+++ b/frontend/studente/src/pages/events/events.html
@@ -3,6 +3,9 @@
     <ion-title>
       {{'title_events'|translate}}
     </ion-title>
+        <ion-buttons end>
+      <button-home></button-home><button-notifications></button-notifications><button-profile></button-profile>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
