--- a/frontend/studente/src/pages/exam/exam.html
+++ b/frontend/studente/src/pages/exam/exam.html
@@ -1,11 +1,48 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Institute
+      {{'title_exam'|translate}}
     </ion-title>
+        <ion-buttons end>
+      <button-home></button-home><button-notifications></button-notifications><button-profile></button-profile>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
- <div>{{institute.teachingUnit.name}}</div>
+  <div class="row-add-stage">
+<!--
+    <button class="button-add-stage" ion-button clear (click)="addNewExam()">{{'exam_add_new_button'|translate}}</button>-->
+  </div>
+
+  <div class="stage-filter">
+    <input type="text" [(ngModel)]="filter" placeholder="{{'stage_filter_placeholder'|translate}}">
+    <ion-icon class="filter-search-icon" name="md-search"></ion-icon>
+    <ion-item>
+      <ion-label>{{'exam_order_label'|translate}}</ion-label>
+      <ion-select [(ngModel)]="order">
+        <ion-option value=true>A-Z</ion-option>
+        <ion-option value=false>Z-A</ion-option>
+      </ion-select>
+    </ion-item>
+  </div>
+  <ion-list>
+    <ion-card  *ngFor="let exam of exams| experiencefilter:filter:'title'| orderBy:'exam.attributes.title':order">
+      <div class="expandable-list">
+        <div class="stage-title">{{exam.attributes.titoloStudio}}</div>
+        <div class="stage-certificate">certificato si/no</div>
+        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(exam)"> <ion-icon class="stage-expansion-icon" item-right [name]="isDetailsShown(exam) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
+      </div>
+      <div padding *ngIf="isDetailsShown(exam)">
+        {{exam.attributes.titoloStudio}}
+<!--
+        <div >
+          <button class="button-add-stage" ion-button clear (click)="deleteStage(exam)">{{'exam_delete_button'|translate}}</button>
+          <button class="button-add-stage" ion-button clear (click)="updateStage(exam)">{{'exam_update_button'|translate}}</button>
+        </div>
+-->
+      </div>
+
+    </ion-card>
+  </ion-list>
 </ion-content>
