--- a/frontend/studente/src/pages/notifications/notifications.html
+++ b/frontend/studente/src/pages/notifications/notifications.html
@@ -3,6 +3,9 @@
     <ion-title>
       {{'title_notifiche'|translate}}
     </ion-title>
+            <ion-buttons end>
+      <button-home></button-home><button-profile></button-profile>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
