--- a/frontend/studente/src/pages/institute/institute.html
+++ b/frontend/studente/src/pages/institute/institute.html
@@ -11,8 +11,6 @@
 
 <ion-content padding>
   <div class="row-add-stage">
-<!--
-    <button class="button-add-stage" ion-button clear (click)="addNewExam()">{{'exam_add_new_button'|translate}}</button>-->
   </div>
   <ion-list>
     <ion-card  *ngFor="let registration of registrations| experiencefilter:filter:'title'| orderBy:'exam.attributes.title':order">
@@ -21,18 +19,11 @@
         <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(registration)"> <ion-icon class="stage-expansion-icon" item-right [name]="isDetailsShown(registration) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
       </div>
       <div padding *ngIf="isDetailsShown(registration)">
-        <div class="stage-title">{{registration.course}}</div>
-        <div class="stage-title">{{registration.schoolYear}}</div>
-        <div class="stage-title">{{registration.classroom}}</div>
-        <div class="stage-title">{{teachingUnit.name}}</div>
-<!--
-        <div >
-          <button class="button-add-stage" ion-button clear (click)="deleteStage(exam)">{{'exam_delete_button'|translate}}</button>
-          <button class="button-add-stage" ion-button clear (click)="updateStage(exam)">{{'exam_update_button'|translate}}</button>
-        </div>
--->
+        <div class="stage-title"> <span class="registration-institute-label">{{'registration_course_label'|translate}}</span>{{registration.course}}</div>
+        <div class="stage-title"> <span class="registration-institute-label">{{'registration_year_label'|translate}}</span>{{registration.schoolYear}}</div>
+        <div class="stage-title"><span class="registration-institute-label"> {{'registration_class_label'|translate}}</span>{{registration.classroom}}</div>
+        <div class="stage-title"><span class="registration-institute-label"> {{'registration_teachingUnit_label'|translate}}</span>{{teachingUnit.name}}</div>
       </div>
-
     </ion-card>
   </ion-list>
 </ion-content>
