--- a/frontend/studente/src/pages/addActivity/addActivity.html
+++ b/frontend/studente/src/pages/addActivity/addActivity.html
@@ -9,27 +9,21 @@
 <ion-content padding>
  <div>add activity</div>
   <ion-grid>
-  <ion-row>
- <ion-col><button ion-button (click)="addActivity()">salva</button></ion-col><ion-col><button (click)="discard()">annulla</button></ion-col>
-    </ion-row>
+
      <ion-row>
     <ion-col><ion-label>{{'addActivity_title_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_title_placeholder'|translate}}" [(ngModel)]="activity.title"></ion-input>
     </ion-item></ion-col>
     </ion-row>
      <ion-row>
 
-    <ion-col><ion-label>{{'addActivity_period_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateFrom" placeholder="{{'addActivity_date_from_placeholder'|translate}}" ></ion-datetime>
+    <ion-col><ion-label>{{'addActivity_date_from_placeholder'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateFrom" placeholder="{{'addActivity_date_from_placeholder'|translate}}" ></ion-datetime>
     </ion-item></ion-col>
     </ion-row>
          <ion-row>
-    <ion-col><ion-label>{{'addActivity_period_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateTo" placeholder="{{'addActivity_date_to_placeholder'|translate}}" ></ion-datetime>
+    <ion-col><ion-label>{{'addActivity_date_to_placeholder'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateTo" placeholder="{{'addActivity_date_to_placeholder'|translate}}" ></ion-datetime>
     </ion-item></ion-col>
     </ion-row>
-      <ion-row>
 
-    <ion-col><ion-label>{{'addActivity_company_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_company_placeholder'|translate}}" [(ngModel)]="activity.company"></ion-input>
-    </ion-item></ion-col>
-    </ion-row>
       <ion-row>
 
     <ion-col><ion-label>{{'addActivity_address_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_address_placeholder'|translate}}" [(ngModel)]="activity.location"></ion-input>
@@ -44,6 +38,9 @@
 
     <ion-col><ion-label>{{'addActivity_description_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_description_placeholder'|translate}}" [(ngModel)]="activity.description"></ion-input>
     </ion-item></ion-col>
+    </ion-row>
+    <ion-row>
+ <ion-col><button ion-button block (click)="addActivity()">salva</button></ion-col><ion-col><button ion-button block (click)="discard()">annulla</button></ion-col>
     </ion-row>
   </ion-grid>
 
