--- a/frontend/studente/src/pages/addStage/addStage.html
+++ b/frontend/studente/src/pages/addStage/addStage.html
@@ -7,11 +7,8 @@
 </ion-header>
 
 <ion-content padding>
- <div>add stage</div>
   <ion-grid>
-  <ion-row>
- <ion-col><button ion-button (click)="addStage()">salva</button></ion-col><ion-col><button (click)="discard()">annulla</button></ion-col>
-    </ion-row>
+
      <ion-row>
     <ion-col><ion-label>{{'addStage_title_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addStage_title_placeholder'|translate}}" [(ngModel)]="stage.title"></ion-input>
     </ion-item></ion-col>
@@ -23,11 +20,6 @@
     </ion-row>
          <ion-row>
     <ion-col><ion-label>{{'addStage_period_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateTo" placeholder="{{'addStage_date_to_placeholder'|translate}}" ></ion-datetime>
-    </ion-item></ion-col>
-    </ion-row>
-      <ion-row>
-
-    <ion-col><ion-label>{{'addStage_company_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addStage_company_placeholder'|translate}}" [(ngModel)]="stage.company"></ion-input>
     </ion-item></ion-col>
     </ion-row>
       <ion-row>
@@ -44,6 +36,9 @@
 
     <ion-col><ion-label>{{'addStage_description_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addStage_description_placeholder'|translate}}" [(ngModel)]="stage.description"></ion-input>
     </ion-item></ion-col>
+    </ion-row>
+      <ion-row>
+ <ion-col><button ion-button block (click)="addStage()">salva</button></ion-col><ion-col><button ion-button block (click)="discard()">annulla</button></ion-col>
     </ion-row>
   </ion-grid>
 
