added certifcates for certifications

--- a/frontend/studente/src/pages/addActivity/addActivity.html
+++ b/frontend/studente/src/pages/addActivity/addActivity.html
@@ -40,7 +40,7 @@
     </ion-item></ion-col>
     </ion-row>
     <ion-row>
- <ion-col><button ion-button block (click)="addActivity()">salva</button></ion-col><ion-col><button ion-button block (click)="discard()">annulla</button></ion-col>
+ <ion-col><button ion-button block (click)="addActivity()">{{'save_button_label'|translate}}</button></ion-col><ion-col><button ion-button block (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
     </ion-row>
   </ion-grid>
 
