--- a/frontend/studente/src/pages/addEvent/addEvent.html
+++ b/frontend/studente/src/pages/addEvent/addEvent.html
@@ -39,7 +39,7 @@
     </ion-item></ion-col>
     </ion-row>
       <ion-row>
- <ion-col><button ion-button block (click)="addEvent()">salva</button></ion-col><ion-col><button ion-button block  (click)="discard()">annulla</button></ion-col>
+ <ion-col><button ion-button block (click)="addEvent()">{{'save_button_label'|translate}}</button></ion-col><ion-col><button ion-button block  (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
     </ion-row>
   </ion-grid>
 
