--- a/frontend/studente/src/pages/addCertification/addCertification.html
+++ b/frontend/studente/src/pages/addCertification/addCertification.html
@@ -42,6 +42,11 @@
     <ion-col><ion-label>{{'addStage_certificate_label'|translate}}</ion-label></ion-col><ion-col> <ion-item>    <input type="file" ng2FileSelect [uploader]="uploader" />
 
     </ion-item></ion-col>
+      </ion-row>
+    <ion-row *ngIf="certificate!=null">
+          <ion-col ><ion-label>{{'certificate'|translate}}</ion-label></ion-col><ion-col> <ion-item>  {{certificate.documentUri}}
+
+    </ion-item></ion-col>
     </ion-row>
      <tr *ngFor="let item of uploader.queue">
                                     <td><strong>{{ item.file.name }}</strong></td>
@@ -72,7 +77,7 @@
                                     </td>
                                 </tr>
       <ion-row>
- <ion-col><button ion-button block (click)="addCertification()">salva</button></ion-col><ion-col><button ion-button block  (click)="discard()">annulla</button></ion-col>
+ <ion-col><button ion-button block (click)="addCertification()">{{'save_button_label'|translate}}</button></ion-col><ion-col><button ion-button block  (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
     </ion-row>
   </ion-grid>
 
