--- a/frontend/studente/src/pages/addStage/addStage.html
+++ b/frontend/studente/src/pages/addStage/addStage.html
@@ -38,7 +38,7 @@
     </ion-item></ion-col>
     </ion-row>
       <ion-row>
- <ion-col><button ion-button block (click)="addStage()">salva</button></ion-col><ion-col><button ion-button block (click)="discard()">annulla</button></ion-col>
+ <ion-col><button ion-button block (click)="addStage()">{{'save_button_label'|translate}}</button></ion-col><ion-col><button ion-button block (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
     </ion-row>
   </ion-grid>
 
