--- a/frontend/studente/src/pages/login/login.html
+++ b/frontend/studente/src/pages/login/login.html
@@ -7,6 +7,11 @@
 </ion-header>
 <ion-content padding>
   <ion-grid>
+        <ion-row>
+      <ion-col >
+          <div text-center>Entra con:</div>
+      </ion-col>
+    </ion-row>
     <ion-row>
       <ion-col col-4 *ngFor="let type of types">
           <div><button class="login-button" [block]="true" ion-button (click)="login(type)">{{type.title}}</button>
